<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="25dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/rayas" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/recent"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/lupa" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/puntos" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:orientation="horizontal"
                        android:background="@drawable/borde_redondeado">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:src="@mipmap/imagen"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/images"
                            android:textSize="15sp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:orientation="horizontal"
                        android:background="@drawable/borde_redondeado">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:src="@mipmap/nota"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="13dp"
                            android:text="@string/audio"
                            android:textSize="15sp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="13dp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:orientation="horizontal"
                        android:background="@drawable/borde_redondeado">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:src="@mipmap/videos"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/videos"
                            android:textSize="15sp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"
                        android:orientation="horizontal"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/borde_redondeado">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:src="@mipmap/documentos"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/documentos"
                            android:textSize="15sp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp" />

                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/browse_files_in_other_apps"
                android:layout_marginStart="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/android"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:text="@string/bug_reports"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/drive"
                        android:layout_marginTop="23dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:text="@string/drive"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/system"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:text="@string/system_traces"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/recent_files_on_phone"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/cuadro"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <include layout="@layout/imagen"/>
                <include layout="@layout/imagen"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/imagen"/>
                <include layout="@layout/imagen"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/imagen"/>
                <include layout="@layout/imagen"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>