<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.75"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:background="@drawable/borde">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@mipmap/baby"
            android:contentDescription="@string/todo" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/imagen"
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/todo" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/awb25wq_460s"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_31_96_kb_4_15_am"
                    android:layout_marginBottom="5dp"
                   android:textSize="13sp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.75"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:background="@drawable/borde"
        android:layout_marginLeft="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@mipmap/baby"
            android:contentDescription="@string/todo" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/imagen"
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:contentDescription="@string/todo" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/awb25wq_460s"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_31_96_kb_4_15_am"
                    android:layout_marginBottom="5dp"
                    android:textSize="13sp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>